// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[POKEMON] should render Pokemon 1`] = `
<DocumentFragment>
  <div
    class="pokemon-details-container"
    id="pokedex-pokemon-details"
  >
    <div
      class="pokemon-details-card"
    >
      <div
        class="pokemon-details-favorite"
      >
        <p
          class="pokemon-details-name"
        >
          raticate
        </p>
        <div
          id="pokedex-pokemon-details__favorite"
        >
          <svg
            color="#373E59"
            fill="currentColor"
            height="30"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(55, 62, 89);"
            viewBox="0 0 512 512"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
            />
          </svg>
        </div>
      </div>
      <div
        class="pokemon-details-about"
      >
        <div>
          <div
            class="pokemon"
            id="pokedex-pokemon"
          >
            <img
              alt="raticate"
              class="pokemon-avatar"
              src="string"
            />
            <div
              class="pokemon__infos"
            >
              <p
                class="pokemon__name"
              >
                raticate
              </p>
              <p
                class="pokemon__number"
              >
                #20
              </p>
            </div>
            <div
              class="pokemon__infos"
            >
              <p>
                18.5 kg
              </p>
              <p>
                0.7 m
              </p>
            </div>
          </div>
          <div
            class="pokemon-details-type"
          >
            Types:
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(168, 167, 122);"
            >
              normal
            </p>
          </div>
          <div
            class="pokemon-details-abilities"
          >
            Abilities:
            <p
              class="pokemon-details-abilities__item"
            >
              run-away
            </p>
          </div>
        </div>
        <div
          class="pokemon-details-stats"
        >
          <div
            class="pokemon-details-stats__item"
          >
            hp
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 20%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                20
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[POKEMON] should render Pokemon and click to favorite 1`] = `
<DocumentFragment>
  <div
    class="pokemon-details-container"
    id="pokedex-pokemon-details"
  >
    <div
      class="pokemon-details-card"
    >
      <div
        class="pokemon-details-favorite"
      >
        <p
          class="pokemon-details-name"
        >
          raticate
        </p>
        <div
          id="pokedex-pokemon-details__favorite"
        >
          <svg
            color="#C22E28"
            fill="currentColor"
            height="30"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(194, 46, 40);"
            viewBox="0 0 512 512"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
            />
          </svg>
        </div>
      </div>
      <div
        class="pokemon-details-about"
      >
        <div>
          <div
            class="pokemon"
            id="pokedex-pokemon"
          >
            <img
              alt="raticate"
              class="pokemon-avatar"
              src="string"
            />
            <div
              class="pokemon__infos"
            >
              <p
                class="pokemon__name"
              >
                raticate
              </p>
              <p
                class="pokemon__number"
              >
                #20
              </p>
            </div>
            <div
              class="pokemon__infos"
            >
              <p>
                18.5 kg
              </p>
              <p>
                0.7 m
              </p>
            </div>
          </div>
          <div
            class="pokemon-details-type"
          >
            Types:
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(168, 167, 122);"
            >
              normal
            </p>
          </div>
          <div
            class="pokemon-details-abilities"
          >
            Abilities:
            <p
              class="pokemon-details-abilities__item"
            >
              run-away
            </p>
          </div>
        </div>
        <div
          class="pokemon-details-stats"
        >
          <div
            class="pokemon-details-stats__item"
          >
            hp
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 20%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                20
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[POKEMON] should render Pokemon and click to remove favorite 1`] = `
<DocumentFragment>
  <div
    class="pokemon-details-container"
    id="pokedex-pokemon-details"
  >
    <div
      class="pokemon-details-card"
    >
      <div
        class="pokemon-details-favorite"
      >
        <p
          class="pokemon-details-name"
        >
          raticate
        </p>
        <div
          id="pokedex-pokemon-details__favorite"
        >
          <svg
            color="#C22E28"
            fill="currentColor"
            height="30"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(194, 46, 40);"
            viewBox="0 0 512 512"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
            />
          </svg>
        </div>
      </div>
      <div
        class="pokemon-details-about"
      >
        <div>
          <div
            class="pokemon"
            id="pokedex-pokemon"
          >
            <img
              alt="raticate"
              class="pokemon-avatar"
              src="string"
            />
            <div
              class="pokemon__infos"
            >
              <p
                class="pokemon__name"
              >
                raticate
              </p>
              <p
                class="pokemon__number"
              >
                #20
              </p>
            </div>
            <div
              class="pokemon__infos"
            >
              <p>
                18.5 kg
              </p>
              <p>
                0.7 m
              </p>
            </div>
          </div>
          <div
            class="pokemon-details-type"
          >
            Types:
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(168, 167, 122);"
            >
              normal
            </p>
          </div>
          <div
            class="pokemon-details-abilities"
          >
            Abilities:
            <p
              class="pokemon-details-abilities__item"
            >
              run-away
            </p>
          </div>
        </div>
        <div
          class="pokemon-details-stats"
        >
          <div
            class="pokemon-details-stats__item"
          >
            hp
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 20%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                20
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
